# FAST-NUCES_work

./: .gitignore  OOP.sln  readme.md
AI/AI Assignment/: main.ipynb  main2.ipynb  redme.md
AI/AI_LAB/: 02-Numpy-Information_part-2.ipynb  baseball.csv  (+9 more)
Algo project/: final.ipynb  main.ipynb  task1.py  task2.py
Assembly Language/: MSAN.vcxproj.filters  lab-13-3.asm
C Language/: hello.c  script.sh
CNET/: LAB  (1).pkt  LAB  (10).pkt  LAB  (2).pkt  LAB  (3).pkt  LAB  (4).pkt  LAB  (6).pkt  LAB  (7).pkt  LAB  (8).pkt  LAB  (9).pkt  Project  (1).pkt  Project  (2).pkt
MSAN/: .gitignore  MSAN.vcxproj  lab-13-1.asm  lab-13-2.asm  lab-13-4.asm  lab-13-5.asm  lab-13.asm  main.asm  pong.asm  t1.asm
OOP/: .gitignore  Class case-study.cpp  Lab-13-1.cpp  Lab-13-2.cpp  Lab-14-1.cpp  Lab-14-2.cpp  Lab-15-1.cpp  Lab_A2-1.cpp  OOP.vcxproj  OOP.vcxproj.filters  q2.cpp  taha awan.cpp
OS/: .swp
PDC/PDC_Ass_3/: CMakeLists.txt  circle_scaler.c  conv_kernel.cl  conv_opencl copy 2.c  conv_opencl copy 3.c  conv_opencl copy.c  conv_scaler copy 2.c  conv_scaler copy 3.c  conv_scaler copy.c  conv_util.h  main.py  result.txt  run.sh
PDC/PDC_Ass_3/Submission/: CMakeLists.txt  run.sh
PDC/PDC_Ass_3/Submission/OpenCL/: conv_kernal.cl  conv_opencl.c
PDC/PDC_Ass_3/Submission/OpenMP/: circle_openmp.c
PDC/PDC_Ass_3/Submission/Scaler/: conv_scaler.c
PF/: Lab 11 (3).cpp  code (10).cpp  code (11).cpp  code (13).cpp  code (18).cpp  code (34).cpp  code (4).cpp  code (40).cpp  code (5).cpp
Robotics/: main.m  main2.m  random_end_effector_positions.csv  robot.m  sani.m  simulation.m  test.m
(+351 files in other folders)
